<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include
        android:id="@+id/editProfileFragmentActionBar"
        layout="@layout/edit_profile_action_bar_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editProfileFragmentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/edit_profile_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editProfileFragmentActionBar" />

    <EditText
        android:id="@+id/editProfileFragmentUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/edit_profile_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editProfileFragmentName" />

    <TextView
        android:id="@+id/editProfileFragmentChangePassTitle"
        style="@style/Login_SignUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/edit_profile_change_password_title"
        app:layout_constraintStart_toStartOf="@id/editProfileFragmentUsername"
        app:layout_constraintTop_toBottomOf="@id/editProfileFragmentUsername" />

    <TextView
        android:id="@+id/editProfileFragmentChangePass"
        style="@style/Login_SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/edit_profile_change_password"
        app:layout_constraintBottom_toBottomOf="@id/editProfileFragmentChangePassTitle"
        app:layout_constraintStart_toEndOf="@id/editProfileFragmentChangePassTitle"
        app:layout_constraintTop_toTopOf="@id/editProfileFragmentChangePassTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>